Overall, midPoint 4.9 is a major step from the past into the future.
</p>
{% endcapture %}
{% include release-dedication.html content=dedicationContent %}
++++

== Changes With Respect To Version 4.9

=== New Features and Major Improvements

* TODO

=== Other Improvements

* Update GUI views after changing of the archetype, that is used in the view. See bug:MID-9776[].

=== Releases Of Other Components

* New version (1.5.2.0) of xref:/connectors/connectors/org.identityconnectors.databasetable.DatabaseTableConnector/[DatabaseTable Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.

* New version (2.8) of xref:/connectors/connectors/com.evolveum.polygon.connector.csv.CsvConnector/[CSV Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.
** Fixed NPE with multivalue attributes when delimiter is not defined. (bug:MID-8609[]).
** Fix UTF-8 BOM character in csv file during of discovery functions. (bug:MID-9497[] and bug:MID-9498[]).

* New version (3.8) of xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.LdapConnector/[AD/LDAP Connector] was released and bundled with midPoint. The connector suggest all names of columns for configuration properties related with name of column.
** Native association support.
** Possibility to choose attributes that should not be returned by default.
** Possibility to choose to encode string values in case of the presence of non standard ASCII characters.
** Workaround for open-ldap mandatory member attribute.
** Possibility to specify used auxiliary object classes in connector configuration.
** Allow to send the LDAP_DIRSYNC_OBJECT_SECURITY flag in Active Directory sync request control.

++++
{% include release-quality.html %}
++++

=== Limitations

Following list provides summary of limitation of this midPoint release.
